fix: border getting too close to icon

--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -14,3 +14,20 @@ img.icon {
   width: 30px;
   height: 30px;
 }
+
+.invalid-message-highlight:has(.invalid-message) {
+  &::before {
+    @media (min-width: map-get($grid-breakpoints, xs)) {
+      left: -1.35rem !important;
+    }
+    @media (min-width: map-get($grid-breakpoints, sm)) {
+      left: -.75rem !important;
+    }
+    @media (min-width: map-get($grid-breakpoints, md)) {
+      left: .25rem !important;
+    }
+    @media (min-width: map-get($grid-breakpoints, lg)) {
+      left: .5rem !important;
+    }
+  }
+}
